--- a/main.html
+++ b/main.html
@@ -1,9 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gra Planszowa</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+  <div class="game-board">
+    <div class="player player-1">
+      <h3>Name</h3>
+      <span>Gold: 123</span>
+    </div>
+    <div class="player player-2">
+      <h3>Name</h3>
+      <span>Gold: 123</span>
+    </div>
+    <div class="player player-3">
+      <h3>Name</h3>
+      <span>Gold: 123</span>
+    </div>
+    <div class="player player-4">
+      <h3>Name</h3>
+      <span>Gold: 123</span>
+    </div>
 
+    <div class="center">
+      <button> koloda </button>
+      <div class="bid">Aktualna Karta: <span id="current-card">Brak</span></div>
+    </div>
+
+  </div>
+
+  <script src="script.js"></script>
 </body>
+
 </html>
