new construct project

--- a/main.html
+++ b/main.html
@@ -8,30 +8,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body style="background-color: darkgray;">
 
-  <div class="game-board">
-    <div class="player player-1">
-      <h3>Name</h3>
-      <span>Gold: 123</span>
-    </div>
-    <div class="player player-2">
-      <h3>Name</h3>
-      <span>Gold: 123</span>
-    </div>
-    <div class="player player-3">
-      <h3>Name</h3>
-      <span>Gold: 123</span>
-    </div>
-    <div class="player player-4">
-      <h3>Name</h3>
-      <span>Gold: 123</span>
-    </div>
+  <div class="canvas">
 
-    <div class="center">
-      <button> koloda </button>
-      <div class="bid">Aktualna Karta: <span id="current-card">Brak</span></div>
-    </div>
+    <h2>Games</h2>
+    <button onclick="window.location.href='/game/Warehose51/main.html';">
+      <p>Game name</p>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQQAtv1KCj3iWesi2FRwtjY39IoxoEYikyVrw&s">
+    </button>
 
   </div>
 
