--- a/main.html
+++ b/main.html
@@ -16,8 +16,11 @@
       <h2>Board Game</h2>
       <div id="gameList">
 
-        <button id="gameButton" onclick="window.location.href='/game/Warehose51/main.html';">
-          <img id="gameImage" src="/image/Warehose51.png">
+        <button id="gameButton" onclick="window.location.href='/game/Warehouse51/main.html';">
+          <img id="gameImage" src="/image/Warehouse51.png">
+        </button>
+        <button id="gameButton" onclick="window.location.href='#';">
+          <img id="gameImage" src="/image/Fortress.png">
         </button>
 
       </div>
